proper file arrangement

--- a/list.html
+++ b/list.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta description="page for lists">
 	<meta author="gaya">
-	<link rel="stylesheet" href="file:///D:/workspace/htmla/style.css"
+	<link rel="stylesheet" href="css/style.css">
 </html>
 
 <body>
 	<h1> COUNTRIES</h1>
-	<p><a href="file:///D:/workspace/htmla/kkk/pre.html"> countries</a> </p>
+	<p><a href="kkk/pre.html"> countries</a> </p>
 
 	<dl>
 		<dt> <span>India</span></dt>
