correction of list

--- a/list.html
+++ b/list.html
@@ -1,11 +1,12 @@
 <!doctype html >
 <html>
+<head>
 	<title>LIST</title>
 	<meta charset="utf-8">
 	<meta description="page for lists">
 	<meta author="gaya">
 	<link rel="stylesheet" href="css/style.css">
-</html>
+</head>
 
 <body>
 	<h1> COUNTRIES</h1>
@@ -23,3 +24,4 @@
 		<dd> the head of capitalism </dd>
 	</dl>
 </body>
+</html>
