--- a/4thjuly.html
+++ b/4thjuly.html
@@ -11,9 +11,11 @@
   <body>
     <h1>Progress till 4th </h1>
     <h2>Today's proverb</h2>
+    <!--quotation blocks-->
     <blockquote>
       <p>Two wrongs don't make a right</p>
     </blockquote>
+    <!--lists-->
     <ol type="I">
       <li>Vagrant </li>
       <li>GitBash</li>
@@ -24,6 +26,11 @@
       <li>Clone the existing repository </li>
       <li>Create a new git repository using init</li>
     </ul>
-    <a href="http://www.wikipedia.com" target="_top"> wikipedia</a>
+    <div>
+      <!--anchor tag-->
+      <p><a href="http://www.wikipedia.com" target="_top"> wikipedia</a></p>
+      <!--image tag-->
+      <img src="img/t90.jpg" alt="Armoured tank"/>
+    </div>
   </body>
 </html>
