--- a/page_fragmenta.html
+++ b/page_fragmenta.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Ratings</a></li>
               </ul>
           </div>
-          <h1 > 20 javascripts Frameworks Worth Checking Out</h1>
+          <h1 > 20 Javascripts Frameworks Worth Checking Out</h1>
           <p><a href="#">Siddharth </a> was here<a href="#">44 comments</a></p>
           <div id="body">
             <p>
