--- a/17.html
+++ b/17.html
@@ -26,6 +26,24 @@
             <textarea id="yourcomment" name="yourname"></textarea>
           </li>
           <li>
+            <label for="css">Do you like CSS?</label>
+            <input type="checkbox" id="css" name="css"/>
+          </li>
+          <li>
+            <label for="language"> Favourite language</label>
+            <input type="radio" id="language" name="language" value="CSS"> CSS</input>
+            <input type="radio" id="language" name="language" value="HTMl"> HTML</input>
+            <input type="radio" id="language" name="language" value="Javascript"> JAVASCRIPT</input>
+            <input type="radio" id="language" name="language" value="C"> C</input>
+          </li>
+          <li>
+            <label for="language"> More than one </label>
+            <input type="radio" id="language" name="CSS"> CSS</input>
+            <input type="radio" id="language" name="HTML"> HTML</input>
+            <input type="radio" id="language" name="java"> JAVASCRIPT</input>
+            <input type="radio" id="language" name="c"> C</input>
+          </li>
+          <li>
             <input type="submit" value="GO!!"/>
           </li>
         </ul>
