--- a/page_fragmenta.html
+++ b/page_fragmenta.html
@@ -14,14 +14,14 @@
         </div>
         <div class="preview">
           <div class="jaken">
-              <ul id="menu">
+              <ul >
                 <li><a href="#">Article</a></li>
                 <li><a href="#">Roundup</a></li>
                 <li><a href="#">Ratings</a></li>
               </ul>
           </div>
           <h1 > 20 Javascripts Frameworks Worth Checking Out</h1>
-          <p><a href="#">Siddharth </a> was here<a href="#">44 comments</a></p>
+          <p class="post_info"><a href="#">Siddharth </a> was here<a href="#"> 44 comments</a></p>
           <div id="body">
             <p>
               Development began soon after the release of Sonic and Knuckles in 1994,
