navbar with drop down menu

--- a/960_padding_corrected/p2.html
+++ b/960_padding_corrected/p2.html
@@ -48,7 +48,8 @@
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </p>
         </section>
-        <section  id="imp2" class="grid_2 alpha clear">
+        <div class="clear"></div>
+        <section  id="imp2" class="grid_2 alpha ">
           <h4>Karl marx</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -66,7 +67,7 @@
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
              </p>
         </section>
-        <section class="grid_2 omega">
+        <section class="grid_2 alpha omega">
           <h4>Karl marx</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
